--- a/translations/en/loc/elements/DLC_EXILE_exile_lore_elements.json
+++ b/translations/en/loc/elements/DLC_EXILE_exile_lore_elements.json
@@ -235,7 +235,7 @@
         {
             "id": "fragmentedge.exile.exhausted",
             "label": "A Knife's Secret (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -261,7 +261,7 @@
         {
             "id": "fragmentedgec.exile.exhausted",
             "label": "An Operation of the Strix (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -274,7 +274,7 @@
         {
             "id": "fragmentedged.exile.exhausted",
             "label": "The Names of the Wolf (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -287,7 +287,7 @@
         {
             "id": "fragmentedgee.exile.exhausted",
             "label": "The Cinnabar Forms (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -300,7 +300,7 @@
         {
             "id": "fragmentedgef.exile.exhausted",
             "label": "The Alignments of Murder (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -313,7 +313,7 @@
         {
             "id": "fragmentedgeg.exile.exhausted",
             "label": "The Mysteries of Force (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -515,7 +515,7 @@
         {
             "id": "fragmentedgeb.colonel.exhausted",
             "label": "Chiliarch's Lesson (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -528,7 +528,7 @@
         {
             "id": "fragmentedgec.colonel.exhausted",
             "label": "An Operation of the Histid (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -541,7 +541,7 @@
         {
             "id": "fragmentedged.colonel.exhausted",
             "label": "The Colonel's Names (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -554,7 +554,7 @@
         {
             "id": "fragmentedgee.colonel.exhausted",
             "label": "The Iron Forms (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -567,7 +567,7 @@
         {
             "id": "fragmentedgef.colonel.exhausted",
             "label": "Moduli of the Langet (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -580,7 +580,7 @@
         {
             "id": "fragmentedgeg.colonel.exhausted",
             "label": "The Scarred Mysteries (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -782,7 +782,7 @@
         {
             "id": "fragmentedgeb.lionsmith.exhausted",
             "label": "The Shahpur's Lesson (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -795,7 +795,7 @@
         {
             "id": "fragmentedgec.lionsmith.exhausted",
             "label": "An Operation of the Labhite (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -808,7 +808,7 @@
         {
             "id": "fragmentedged.lionsmith.exhausted",
             "label": "The Lionsmith's Names (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -821,7 +821,7 @@
         {
             "id": "fragmentedgee.lionsmith.exhausted",
             "label": "The Brass Forms (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -834,7 +834,7 @@
         {
             "id": "fragmentedgef.lionsmith.exhausted",
             "label": "Consummations of the Helve (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
@@ -847,7 +847,7 @@
         {
             "id": "fragmentedgeg.lionsmith.exhausted",
             "label": "The Shattered Mysteries (Exhausted)",
-            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to reccover more quickly with each upgrade.]",
+            "description": "[I'll need time to recover before I can use this again. Upgrading a technique allows it to recover more quickly with each upgrade.]",
             "aspects": {
                 "exhausted": 1
             },
