--- a/translations/en/loc/elements/credits.json
+++ b/translations/en/loc/elements/credits.json
@@ -46,7 +46,7 @@
             "id": "credits.moarcode",
             "label": "Additional Coding",
             "icon": "reason",
-            "description": "Fraser McCormick\nChris Payne\nMarc Gagné (Lyrositor)\nHannah Rose"
+            "description": "Chris Payne\nFraser McCormick\nMarc Gagné (Lyrositor)\nHannah Rose\nChelnoque"
         },
         {
             "id": "credits.moardesign",
@@ -64,31 +64,31 @@
             "id": "credits.loc.zh-hans.",
             "label": "Chinese Localisation",
             "icon": "curio.lantern",
-            "description": "\nProject Gutenberg | indienova, Bamboo0o0, Dandirion, Erudito93, Ericcil, Fish Wu, Girafe, Lotus, Menschmaschine, Nitrome, <font=NotoSansCJKsc-Regular>N某</font>, Oval_plus, craft, laolaoruqin, railhead, wizardo, <font=NotoSansCJKsc-Regular>阿橘倒地不起, 百影虱子, 可里, 懒猫咪, 骡子·mule, 墨染胧月夜, 沙拉, 一只小雨</font>. EXILE: <font=NotoSansCJKsc-Regular>黑叶残荷, 白前Cynanchum, 黑叶残荷, 狂犬, Dominic Fowler, IvyLili, Corey SK, Cora Reynolds, 京极明, Tomatiel西红柿精, 清客, 安定斯基</font>"
+            "description": "\nProject Gutenberg | indienova, Bamboo0o0, Dandirion, Erudito93, Ericcil, Fish Wu, Girafe, Lotus, Menschmaschine, Nitrome, <font=NotoSansCJKsc-Regular>N某</font>, Oval_plus, craft, laolaoruqin, railhead, wizardo, <font=NotoSansCJKsc-Regular>阿橘倒地不起, 百影虱子, 可里, 懒猫咪, 骡子·mule, 墨染胧月夜, 沙拉, 一只小雨</font>. EXILE: <font=NotoSansCJKsc-Regular>黑叶残荷 and 白前Cynanchum</font>"
         },
         {
             "id": "credits.loc.ru",
             "label": "Russian Localisation",
-            "description": "General Manager: Adam Piesiak, Business Development Director: Paweł Ziajka, Business Development Manager: Elena Roor, Director of Quality Assurance: Sergiusz Ślosarczyk, QA Project Manager: Marcin Górniak, QA Lab Managers: Łukasz Mirosławski: Paweł Strzelczyk, QA Training Manager: Michał Raczyński, QA Team Leader: Michał Mugerman, QA Localization Testers: Aliaksandr Anoshkin/Karina Turanskaya, IT Manager: Tomasz Dziedzic. EXILE: LocalizeDirect VERSION NOTES VOLUNTEER TRANSLATION: Artem Dvorniy",
+            "description": "General Manager: Adam Piesiak, Business Development Director: Paweł Ziajka, Business Development Manager: Elena Roor, Director of Quality Assurance: Sergiusz Ślosarczyk, QA Project Manager: Marcin Górniak, QA Lab Managers: Łukasz Mirosławski: Paweł Strzelczyk, QA Training Manager: Michał Raczyński, QA Team Leader: Michał Mugerman, QA Localization Testers: Aliaksandr Anoshkin/Karina Turanskaya, IT Manager: Tomasz Dziedzic. EXILE and revisions: LocalizeDirect (Olga Apalchuk)\n\n VERSION NOTES VOLUNTEER TRANSLATION: Artem Dvorniy",
             "icon": "catalogueofunchartedpleasures"
         },
         {
             "id": "credits.loc.jp",
             "label": "Japanese Localisation",
-            "description": "LocalizeDirect \n\nVERSION NOTES VOLUNTEER TRANSLATION: Nirvana Studio",
+            "description": "LocalizeDirect (Ramune)\n\nClocq\n\nVERSION NOTES VOLUNTEER TRANSLATION: Nirvana Studio",
             "icon": "jploc"
         },
         {
             "id": "credits.loc.de",
             "label": "German Localisation",
-            "description": "Localize Direct \n\nVERSION NOTES VOLUNTEER TRANSLATION: Jan Zimmer",
+            "description": "Localize Direct (Rolf Klischewski) \n\nVERSION NOTES VOLUNTEER TRANSLATION: Jan Zimmer",
             "icon": "bookofthrones"
         },
         {
             "id": "credits.special",
             "label": "Special Thanks",
             "icon": "temptation.remembrance",
-            "description": "Sonja & PK; Matt Hosty; Haley Uyrus, Norman Chalk, Jasper R, Thomas Wade, Michael Guan, Darren Liao, Eve Kimbrough, Joel Bridge, drgatos,  Erin Dalton, So La, Sean Shannon, Jakob Hajdus, Zachary Dearing, Indijohnson, Haoran Sun, Tobia Ronco, Olaf Stachowski, Aiuigi Sarig, Kamil Kozlowski, aljawn, Isyander, nsk, Marcel Möhring, Yufei Qiu, and literally everyone who has ever sent feedback or a bug report. Thank you."
+            "description": "Sonja & PK; Matt Hosty; Haley Uyrus, Norman Chalk, Jasper R, Thomas Wade, Michael Guan, Darren Liao, Eve Kimbrough, Joel Bridge, drgatos,  Erin Dalton, So La, Sean Shannon, Jakob Hajdus, Zachary Dearing, Indijohnson, Haoran Sun, Tobia Ronco, Olaf Stachowski, Aiuigi Sarig, Kamil Kozlowski, aljawn, Isyander, nsk, Marcel Möhring, Clock, Chelnoque, and literally everyone who has ever sent feedback or a bug report. Thank you."
         }
     ]
 }
