--- a/translations/en/loc/elements/fragments.json
+++ b/translations/en/loc/elements/fragments.json
@@ -1198,7 +1198,7 @@
                 "subvertable_lore": 1,
                 "challenge.intuition": 1
             },
-            "description": "Lie awake, and listen. The wind speaks in the branches. The house cries out in its sleep. These are the roads that chaos ride. [Speak this over a corpse in a Rite, with a Winter influence present, and the corpse will rise.]",
+            "description": "Lie awake, and listen. The wind speaks in the branches. The house cries out in its sleep. These are the roads that chaos rides. [Speak this over a corpse in a Rite, with a Winter influence present, and the corpse will rise.]",
             "slots": [
                 {
                     "id": "with",
