--- a/translations/en/loc/recipes/apostle_forge_greatwork.json
+++ b/translations/en/loc/recipes/apostle_forge_greatwork.json
@@ -154,7 +154,9 @@
                 "mortal": 1,
                 "apostleforge.pillarfuel": 1,
                 "tool": -1,
-                "lore": -1
+                "lore": -1,
+                "riteconsumetoolingredientfollowerinfluence": -1,
+                "comments": "Some poor soul kept trying to use Rite Intercalate to baptise a Chosen Compass. People shouldn't do that, but let's not let them try."
             },
             "effects": {
                 "apostleforge.pillarfuel": -1
