--- a/translations/en/loc/recipes/ascension.json
+++ b/translations/en/loc/recipes/ascension.json
@@ -14,7 +14,7 @@
                 "ascensionpowerc": 1
             },
             "startdescription": "This rite is the Key that will allow the Forge of Days to enter me. I will be changed forever.",
-            "description": "The Rite is complete. The Marks of the Forge are upon me. The First Mark is what I have said, and the second is what I have done. If I inspect my body, I'll find the Third. I am aglow with new needs.",
+            "description": "The Rite is complete. The Marks of the Forge are upon me. The First Mark is what I have said, and the Second is what I have done. If I inspect my body, I'll find the Third. I am aglow with new needs.",
             "warmup": 60,
             "craftable": true,
             "burnimage": "flammarion"
@@ -54,7 +54,7 @@
                 "ascensionsensationc": 1
             },
             "startdescription": "This rite is the Key that will allow the Red Grail to enter me. I will be changed forever.",
-            "description": "The Rite is complete. The Marks of the Grail are upon me. The First Mark is what I have said, and the second is what I have done. If I inspect my body, I'll find the Third. I thrill with new appetites.",
+            "description": "The Rite is complete. The Marks of the Grail are upon me. The First Mark is what I have said, and the Second is what I have done. If I inspect my body, I'll find the Third. I thrill with new appetites.",
             "warmup": 60,
             "craftable": true,
             "burnimage": "flammarion"
@@ -105,7 +105,7 @@
                 "ascensionenlightenmentc": 1
             },
             "startdescription": "This rite is the Key that will allow the Watchman's gaze to enter me. I will be changed forever.",
-            "description": "The Rite is complete. The Marks of the Watchman are upon me. The First Mark is what I have said, and the second is what I have done. If I inspect my body, I'll find the Third. My hungers have been refined, now.",
+            "description": "The Rite is complete. The Marks of the Watchman are upon me. The First Mark is what I have said, and the Second is what I have done. If I inspect my body, I'll find the Third. My hungers have been refined, now.",
             "warmup": 60,
             "craftable": true,
             "burnimage": "flammarion"
