--- a/translations/en/loc/recipes/hunting_countermeasures.json
+++ b/translations/en/loc/recipes/hunting_countermeasures.json
@@ -692,7 +692,7 @@
                 "idealist": 1
             },
             "label": "The Horrors Beneath the World's Skin",
-            "startdescription": "'All right, it might end badly for me, but it's worth the sacrifice. And others will carry on the struggle. We'll meet again. [Idealists cannot be demoralised.]",
+            "startdescription": "'All right, it might end badly for me, but it's worth the sacrifice. And others will carry on the struggle. We'll meet again.' [Idealists cannot be demoralised.]",
             "effects": {
                 "notoriety": 1,
                 "dread": 1
