--- a/translations/en/loc/recipes/legacy_physician_recipes.json
+++ b/translations/en/loc/recipes/legacy_physician_recipes.json
@@ -121,7 +121,7 @@
             "actionid": "hookplot",
             "label": "The Watchman's Eye",
             "requirements": {
-                "reason": 1
+                "concentration": 1
             },
             "startdescription": "The Watchman is the Door in the Eye. To unlock my own eye, there must be a tiny sacrifice.",
             "description": "I wielded the knife in sleep. There is pain, but even the pain is a signpost. I have bound the wound. I'll tell them it was an accident. In the dream, I saw the Door. Some day soon, I'll pass it.",
