--- a/translations/en/loc/recipes/long_recipes_attacks.json
+++ b/translations/en/loc/recipes/long_recipes_attacks.json
@@ -1831,7 +1831,7 @@
             "slots": [
                 {
                     "id": "defender",
-                    "label": "Percussigant",
+                    "label": "Caligine",
                     "required": {
                         "spirit_forgec_winter": 1
                     }
