--- a/translations/en/loc/recipes/study_1_books.json
+++ b/translations/en/loc/recipes/study_1_books.json
@@ -775,7 +775,7 @@
             },
             "warmup": 60,
             "startdescription": "The Tantra explains various less than practical countermeasures against the Worms, the 'Serpents Which Are Not Serpents'. Moth and Winter are closest to them, and so understand their weaknesses, but both have their own perils. The Lionsmith crushes them, but that's not recommended for mortals.",
-            "description": "The Worms have always been eager to inhabit us. Here are the practices which make us inhospitable to them.' There are diagrams. The diagrams are not good to look upon, and none of the practices they depict would allow the subject to survive.",
+            "description": "'The Worms have always been eager to inhabit us. Here are the practices which make us inhospitable to them.' There are diagrams. The diagrams are not good to look upon, and none of the practices they depict would allow the subject to survive.",
             "craftable": true
         },
         {
@@ -1070,7 +1070,7 @@
                 "fragmentknockd": 1
             },
             "warmup": 60,
-            "startdescription": "Members of the Ordo took an oath, the Silver Chain, that forbade men to lie with woman, or women with men: 'for what may come is not always the Crime of the Sky, yet that is a furious danger.' It was apparently permissible for men to lie with men, and women with women - in fact, Burzghash suggests that should be encouraged, to distract from other temptations.",
+            "startdescription": "Members of the Ordo took an oath, the Silver Chain, that forbade men to lie with women, or women with men: 'for what may come is not always the Crime of the Sky, yet that is a furious danger.' It was apparently permissible for men to lie with men, and women with women - in fact, Burzghash suggests that should be encouraged, to distract from other temptations.",
             "description": "The manual prescribes potential countermeasures to protect those who might be tempted to go against the oath: masks, disfigurement, severe poetic disciplines. Those who do break it are to be punished with death, although there are lesser punishments prescribed for various acts that don't involve actual coitus. An invocation is included which was used to incorporate these punishments into summoning rites.",
             "craftable": true
         },
@@ -1645,7 +1645,7 @@
                 "riteconsumetoolingredientfollowerinfluence": 1
             },
             "warmup": 60,
-            "startdescription": "The Sun will be divided that it might not sire children. Still its children shall be Four in number and its children shall be Seven in number and its children shall also be Numberless. The Numberless shall open the way for the Seven, and the Seven shall consume the Four...'",
+            "startdescription": "'The Sun will be divided that it might not sire children. Still its children shall be Four in number and its children shall be Seven in number and its children shall also be Numberless. The Numberless shall open the way for the Seven, and the Seven shall consume the Four...'",
             "description": "Amira prophesies four great wars before the Second Dawn, when the Sun-in-Splendour shall rise again. She cautions: 'Sunrise is blood, and I foretell now that the Sun shall rise from blood, yet not the colour of the blood, nor the hour of Night.' She includes a rite that she speculates will be necessary for the Second Dawn.",
             "craftable": true
         },
@@ -1662,7 +1662,7 @@
                 "dread": 1
             },
             "warmup": 60,
-            "startdescription": "No, these doors shouldn't be recorded, but if we had only recorded things before we'd had to leave the Fifth History, we would be in a much better state. So here I am writing it down, and if you don't like it you can sanction me.'",
+            "startdescription": "'No, these doors shouldn't be recorded, but if we had only recorded things before we'd had to leave the Fifth History, we would be in a much better state. So here I am writing it down, and if you don't like it you can sanction me.'",
             "description": "The 'Manual for Departure' lists a number of strategies - occult, martial and political - for quick escapes. Many are irrelevant, obsolete or enigmatic, but the Manual does include a number of powerful techniques for opening portals.",
             "craftable": true
         },
