--- a/translations/en/loc/decks/DLC_EXILE_exile_decks.json
+++ b/translations/en/loc/decks/DLC_EXILE_exile_decks.json
@@ -3,6 +3,7 @@
         {
             "id": "rkx.events",
             "label": "Reckoner Plans",
+            "forlegacyfamily": "exile",
             "description": "The reckoners are planning their next move.",
             "spec": [
                 "rkx.event.aggressive",
@@ -15,6 +16,7 @@
         {
             "id": "rkx.weaknesses.environment",
             "label": "Foe Weaknesses: Environment",
+            "forlegacyfamily": "exile",
             "spec": [
                 "rkx.weakness.cold.hidden",
                 "rkx.weakness.heat.hidden",
@@ -25,6 +27,7 @@
         {
             "id": "rkx.weaknesses.quirk",
             "label": "Foe Weaknesses: Quirk",
+            "forlegacyfamily": "exile",
             "spec": [
                 "rkx.weakness.faith.hidden",
                 "rkx.weakness.cats.hidden",
@@ -35,6 +38,7 @@
         {
             "id": "rkx.weaknesses.disfavour",
             "label": "Foe Weaknesses: Disfavour",
+            "forlegacyfamily": "exile",
             "spec": [
                 "rkx.weakness.horned.hidden",
                 "rkx.weakness.wolf.hidden",
