--- a/translations/en/loc/elements/othernpcs.json
+++ b/translations/en/loc/elements/othernpcs.json
@@ -10,8 +10,7 @@
                 "grail": 3,
                 "heart": 3
             },
-            "description": "Some overwhelming experience has robbed this individual of their senses. They will disappear soon, never to be seen again.",
-            "lifetime": 60,
+            "description": "Some overwhelming experience has robbed this individual of their senses.",
             "xtriggers": {
                 "killmortal": "corpse"
             }
@@ -27,8 +26,6 @@
                 "heart": 3
             },
             "description": "Someone has fallen into your clutches. They won't survive forever.",
-            "lifetime": 600,
-            "decayTo": "corpse",
             "xtriggers": {
                 "killmortal": "corpse",
                 "derangemortal": "lunatic"
@@ -45,8 +42,6 @@
                 "heart": 3
             },
             "description": "Someone has fallen into your clutches. They won't survive forever.",
-            "lifetime": 600,
-            "decayTo": "corpse",
             "xtriggers": {
                 "killmortal": "corpse",
                 "derangemortal": "lunatic"
