--- a/translations/en/loc/elements/remnants.json
+++ b/translations/en/loc/elements/remnants.json
@@ -16,7 +16,26 @@
                 "raiseshattered": "spirit_wintera_edge"
             },
             "lifetime": 60,
-            "decayTo": "notoriety"
+            "decayTo": "notoriety",
+            "burnTo": "corpse.calcin",
+            "comments": "The xtriggers for raising are no longer relevant if we have corpse.calcin, but keeping them in for unexpected execution paths."
+        },
+        {
+            "id": "corpse.calcin",
+            "label": "A Human Corpse",
+            "description": "The spirit is departed.",
+            "aspects": {
+                "winter": 3,
+                "grail": 3,
+                "ingredient": 1,
+                "remnant": 1
+            },
+            "xtriggers": {
+                "raiseburgeoning": "spirit_wintera_moth",
+                "raiseshattered": "spirit_wintera_edge"
+            },
+            "lifetime": 1,
+            "icon": "corpse"
         },
         {
             "id": "corpse.furious",
