--- a/translations/en/loc/elements/vaults.json
+++ b/translations/en/loc/elements/vaults.json
@@ -642,7 +642,7 @@
                     "actionid": "explore"
                 }
             ],
-            "description": "The favourite stories of the Comtes des Raveline claim they descend from the <i>first</i> Sun-King. Other stories have them prowling the forest in wolf-shape. They are long gone. Their rotting chateau remains. Not all its malignities have been uncovered.",
+            "description": "The favourite stories of the Comtes de Raveline claim they descend from the <i>first</i> Sun-King. Other stories have them prowling the forest in wolf-shape. They are long gone. Their rotting chateau remains. Not all its malignities have been uncovered.",
             "unique": true
         },
         {
@@ -1747,7 +1747,7 @@
                     "actionid": "explore"
                 }
             ],
-            "description": "There was a city here. We can pick over its remains like jackals over old bones: palace walls, buried roads, shattered fountains. Sometimes we may find the knowledge of the  dead, and sometimes the dead may find us. [You've found all the Expeditions in the Sands, although you can find and visit Miah several times.]"
+            "description": "There was a city here. We can pick over its remains like jackals over old bones: palace walls, buried roads, shattered fountains. Sometimes we may find the knowledge of the dead, and sometimes the dead may find us. [You've found all the Expeditions in the Sands, although you can find and visit Miah several times.]"
         },
         {
             "id": "vaulteveningisles1",
