--- a/translations/en/loc/recipes/1_debug.json
+++ b/translations/en/loc/recipes/1_debug.json
@@ -4,9 +4,8 @@
             "id": "testemptyresults",
             "label": "'In so far as one denies what is, one is possessed by what is not.' - Le Guin",
             "actionId": "testemptyresults",
-            "effects": {},
             "startdescription": "test empty coming up -",
-            "description": "Nothing here, verb stuck open.",
+            "description": "Nothing here.",
             "warmup": 10,
             "craftable": false
         }
