--- a/translations/en/loc/recipes/__debug.json
+++ b/translations/en/loc/recipes/__debug.json
@@ -3,17 +3,40 @@
         {
             "id": "dbarsacrossthesun",
             "label": "Not 2",
-            "actionId": "escape",
+            "actionid": "explore",
             "startdescription": "garbanzo",
             "warmup": 2,
-            "linked": [
-                {
-                    "id": "dbarsacrossthesunnier",
-                    "label": "Not 3",
-                    "startdescription": "cicero",
-                    "warmup": 10
-                }
-            ]
+            "internaldeck": {
+                "spec": [
+                    "wainscothistories",
+                    "textbookfucine",
+                    "travellingatnight3",
+                    "locksmithsdream4",
+                    "treatiseonunderplaces"
+                ],
+                "draws": 5,
+                "defaultcard": "compensationb",
+                "resetonexhaustion": false
+            },
+
+            "craftable": false
+        },
+        {
+            "id": "om",
+            "label": "om",
+            "actionId": "work",
+            "startdescription": "om",
+            "warmup": 2,
+            "effects": { "contentment": 5 },
+            "craftable": false
+        },
+        {
+            "id": "yorp",
+            "label": "yorp",
+            "actionId": "yorp",
+            "startdescription": "yorp",
+            "warmup": 2,
+            "craftable": false
         }
     ]
 }
