--- a/translations/en/loc/recipes/explore_auctionsales.json
+++ b/translations/en/loc/recipes/explore_auctionsales.json
@@ -21,7 +21,7 @@
                     "chance": 100
                 }
             ],
-            "startdescription": "Few of the customer at Oriflamme's are students of the invisible arts. But even laymen will recognise this as something extraordinary. [Sell with caution. There's no way to get it back.]",
+            "startdescription": "Few of the customers at Oriflamme's are students of the invisible arts. But even laymen will recognise this as something extraordinary. [Sell with caution. There's no way to get it back.]",
             "warmup": 30,
             "craftable": true
         },
@@ -46,7 +46,7 @@
                     "chance": 100
                 }
             ],
-            "startdescription": "Few of the customer at Oriflamme's are students of the invisible arts. They'll buy tools of power as trophies or curiosities, without any idea of their true value. But this is obviously something rare. [Sell with caution. There's no way to get it back.]",
+            "startdescription": "Few of the customers at Oriflamme's are students of the invisible arts. They'll buy tools of power as trophies or curiosities, without any idea of their true value. But this is obviously something rare. [Sell with caution. There's no way to get it back.]",
             "warmup": 30,
             "craftable": true
         },
@@ -71,7 +71,7 @@
                     "chance": 100
                 }
             ],
-            "startdescription": "Few of the customer at Oriflamme's are students of the invisible arts. They'll buy tools of power as trophies or curiosities, without any idea of their true value. But this will get their attention. [Sell with caution. There's no way to get it back.]",
+            "startdescription": "Few of the customers at Oriflamme's are students of the invisible arts. They'll buy tools of power as trophies or curiosities, without any idea of their true value. But this will get their attention. [Sell with caution. There's no way to get it back.]",
             "warmup": 30,
             "craftable": true
         },
