--- a/translations/en/loc/recipes/explore_vaults_c_continent.json
+++ b/translations/en/loc/recipes/explore_vaults_c_continent.json
@@ -13,7 +13,7 @@
                 "seal_hiddendoor": 1,
                 "curse_dread": 1
             },
-            "startdescription": "The remote and rotting chateau of the Comtes des Raveline was looted long ago. We have found hints that it was not looted thoroughly enough. There may be a secret room. Equally, there may be a curse. [Expeditions need at least one Funds per obstacle. Followers will defeat obstacles. If you run out of Funds or Followers, the Expedition ends.]",
+            "startdescription": "The remote and rotting chateau of the Comtes de Raveline was looted long ago. We have found hints that it was not looted thoroughly enough. There may be a secret room. Equally, there may be a curse. [Expeditions need at least one Funds per obstacle. Followers will defeat obstacles. If you run out of Funds or Followers, the Expedition ends.]",
             "description": ".",
             "warmup": 10,
             "craftable": true,
@@ -192,7 +192,7 @@
                 "resetonexhaustion": false
             },
             "startdescription": "Behind a rotting tapestry of wolves hunting men, a panelled wall. In the panelled wall, a secret door. The spring is long gone, of course. We had to smash it in with hammers.",
-            "description": "The last treasures of the Comtes des Raveline lie here, in a surprisingly airy room. High skylight windows have long since broken, and the floor is lost underneath leaves and debris, but once the place was furnished as a nursery. Here is a cradle, with the skeleton of a puppy.",
+            "description": "The last treasures of the Comtes de Raveline lie here, in a surprisingly airy room. High skylight windows have long since broken, and the floor is lost underneath leaves and debris, but once the place was furnished as a nursery. Here is a cradle, with the skeleton of a puppy.",
             "warmup": 30,
             "craftable": false
         },
