--- a/translations/en/loc/recipes/study_8_tutoring.json
+++ b/translations/en/loc/recipes/study_8_tutoring.json
@@ -127,7 +127,7 @@
                 "compensationvalue": -2
             },
             "startdescription": "This will be sufficient. I'll listen carefully.",
-            "description": "The language of the Visions of Aram, of the Book of Daniel, and of the Account of Kanishk at the Spider's Door."
+            "description": "The language of the Visions of Amram, of the Book of Daniel, and of the Account of Kanishk at the Spider's Door."
         },
         {
             "id": "studysanskrittutoring",
