--- a/translations/en/loc/recipes/talking_8_follower.json
+++ b/translations/en/loc/recipes/talking_8_follower.json
@@ -486,7 +486,7 @@
             },
             "startdescription": "If my devotee's faith is wavering, I can use Fervour to fire their enthusiasm again.",
             "description": "'Would you forget your dreams so quickly?'",
-            "effects": {
+            "aspects": {
                 "refiring": 1
             },
             "craftable": true,
@@ -1573,7 +1573,7 @@
                 "locationauctionhouse": 1
             },
             "startdescription": "@#uqtristan|Tristan nods emphatically, without speaking.\n#uqvalciane|Valciane nods curtly, but her eyes glow as coals do when a furnace door is opened.\n#uqelridge|Elridge folds his knife shut with a click, and focuses his whole attention on me. 'Yes, please,' he says.\n#uqlaidlaw|Laidlaw beams. 'That sounds pretty!'@",
-            "description": "Some prefer moonlit walks. Some prefer soft music. But there are those whose enjoy shining opulence, high company, and the soft click of the operations of power. [To begin an affair with this character, show them that your deepest desires are aligned.]",
+            "description": "Some prefer moonlit walks. Some prefer soft music. But there are those who enjoy shining opulence, high company, and the soft click of the operations of power. [To begin an affair with this character, show them that your deepest desires are aligned.]",
             "linked": [
                 {
                     "id": "L_talk_roseopportunity",
